--- a/supervision/frontend/style.css
+++ b/supervision/frontend/style.css
@@ -2,6 +2,6 @@
 Ce fichier contient les elements de style des pages du site web
 ************************************************************************/
 #map {  
-    width: 100%;
-    height: 80%;
+    width: 70%;
+    height: 80vh;
 }
