--- a/supervision/frontend/css/main.css
+++ b/supervision/frontend/css/main.css
@@ -4,6 +4,19 @@
     height: 80vh;
 }
 
+.arrow-marker {
+    font-size: 50px;
+    color: red;
+}
+
+.leaflet-tooltip.custom-tooltip {
+    background: white !important;
+    opacity: 0.95 !important;
+    border-radius: 10px !important;
+    box-shadow: 3px 3px 3px rgba(0,0,0,0.4) !important;
+    padding: 4px;
+}
+
 /* style du bouton delete */
 .deleteBtn {
     background-color: transparent;
@@ -33,7 +46,6 @@
     position: relative;
     overflow: hidden;
     z-index: 1;
-
 }
 #calculTravelBtn::before {
     content: '';
@@ -78,15 +90,55 @@
     width: 15em;
 }
 
-.arrow-marker {
-    font-size: 50px;
-    color: red;
+/* style du bouton logout */
+.logout {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	width: 40px;
+	height: 40px;
+	border: none;
+	border-radius: 50%;
+	position: relative;
+	overflow: hidden;
+	transition-duration: .3s;
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+	background-color: #f3a72d;
 }
-
-.leaflet-tooltip.custom-tooltip {
-    background: white !important;
-    opacity: 0.95 !important;
-    border-radius: 10px !important;
-    box-shadow: 3px 3px 3px rgba(0,0,0,0.4) !important;
-    padding: 4px;
+.sign {
+	width: 100%;
+	transition-duration: .3s;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.sign svg {
+	width: 17px;
+}
+.sign svg path {
+	fill: white;
+}
+.text {
+	position: absolute;
+	right: 0%;
+	width: 0%;
+	opacity: 0;
+	color: white;
+	transition-duration: .3s;
+}
+.logout:hover {
+	width: 125px;
+	border-radius: 40px;
+	transition-duration: .3s;
+}
+.logout:hover .sign {
+	width: 30%;
+	transition-duration: .3s;
+	padding-left: 20px;
+}
+.logout:hover .text {
+	opacity: 1;
+	width: 70%;
+	transition-duration: .3s;
+	padding-right: 10px;
 }
